--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^15.2.0",
     "date-fns": "^2.29.3",
     "firebase": "^9.17.2",
+    "ngx-cookie-service": "^15.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
