--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "@stripe/stripe-js": "^1.35.0",
     "date-fns": "^2.29.3",
     "firebase": "^9.17.2",
     "ngx-cookie-service": "^15.0.0",
